--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:text="click1"
         tools:layout_editor_absoluteX="61dp"
         tools:layout_editor_absoluteY="49dp" />
+//comment comment
 
     <Button
         android:id="@+id/rollButton"
